# python-quicksight

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  req.txt  requirements.txt  setup.py
python_quicksight/: main.py
python_quicksight/utils/: constants.py
