[tool.poetry]
name = "python-quicksight"
version = "0.0.1-alpha"
description = ""
authors = ["herbert.santos <herbert.santos@gmail.com>"]
readme = "README.md"
packages = [{include = "python_quicksight"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "~1.28.22"
commitizen = "~3.6.0"
twine = "~4.0.2"
mkdocs = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ['toml']